refactor: simplify response handling in RpcHandlerDispatcher and update tests for null output